--- a/exercise2_class4.ipynb
+++ b/exercise2_class4.ipynb
@@ -6,7 +6,7 @@
       "name": "exercise2_class4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNLInAIZ7StE1Mcr82B06pd",
+      "authorship_tag": "ABX9TyNAuBTKIo6mnbcTfO1KIPqS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "zftZjQ1nDYbp"
       },
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "GvpWT5M0EEJk"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -68,9 +68,9 @@
           "height": 424
         },
         "id": "6nG_JSVzEPVq",
-        "outputId": "2256eba8-a054-4aeb-a824-dfb600cbcb36"
+        "outputId": "500e64bc-832c-4d30-8514-2dbb579697ee"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5e2840ae-17e4-49a1-b3ad-96146db218e3\">\n",
+              "  <div id=\"df-9b6e3750-0d60-4f31-8d0d-7a0e391caecd\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -189,7 +189,7 @@
               "</table>\n",
               "<p>1268 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5e2840ae-17e4-49a1-b3ad-96146db218e3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b6e3750-0d60-4f31-8d0d-7a0e391caecd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -240,12 +240,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5e2840ae-17e4-49a1-b3ad-96146db218e3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9b6e3750-0d60-4f31-8d0d-7a0e391caecd button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5e2840ae-17e4-49a1-b3ad-96146db218e3');\n",
+              "          const element = document.querySelector('#df-9b6e3750-0d60-4f31-8d0d-7a0e391caecd');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "ygOeWFSrE1jE"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -294,9 +294,9 @@
           "height": 424
         },
         "id": "UMJUMu1eGDRx",
-        "outputId": "e01c769b-deb0-4b9d-ad4b-befa0a2f527b"
+        "outputId": "f8a3ea73-c844-4347-bda7-ae08b9a912b2"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cd899abc-fa1c-4e13-a885-48c02d7fd941\">\n",
+              "  <div id=\"df-baacaa68-d2c8-4b64-87de-d80c940c3e22\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -427,7 +427,7 @@
               "</table>\n",
               "<p>1268 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cd899abc-fa1c-4e13-a885-48c02d7fd941')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-baacaa68-d2c8-4b64-87de-d80c940c3e22')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -478,12 +478,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-cd899abc-fa1c-4e13-a885-48c02d7fd941 button.colab-df-convert');\n",
+              "          document.querySelector('#df-baacaa68-d2c8-4b64-87de-d80c940c3e22 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-cd899abc-fa1c-4e13-a885-48c02d7fd941');\n",
+              "          const element = document.querySelector('#df-baacaa68-d2c8-4b64-87de-d80c940c3e22');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -506,7 +506,289 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dolar_df[\"fecha\"] = pd.to_datetime(dolar_df[\"fecha\"], dayfirst=True)"
+      ],
+      "metadata": {
+        "id": "sAAR-w_NOUd_"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dolar_df = dolar_df.set_index(\"fecha\")"
+      ],
+      "metadata": {
+        "id": "xyUB7cZmNgGV"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dolar_df['Año'] = dolar_df.index.year\n",
+        "dolar_df['Mes'] = dolar_df.index.month"
+      ],
+      "metadata": {
+        "id": "qj5ltiWgNpJY"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dolar_df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 455
+        },
+        "id": "PVDQZtF2OuaJ",
+        "outputId": "ccdb952e-6e97-4ad3-a7a2-35dc12d5ca3b"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "            compra  venta  Promedio   Año  Mes\n",
+              "fecha                                         \n",
+              "2020-08-05   71.89  76.89    74.390  2020    8\n",
+              "2020-08-04   71.69  76.69    74.190  2020    8\n",
+              "2020-08-03   71.64  76.64    74.140  2020    8\n",
+              "2020-07-31   71.39  76.39    73.890  2020    7\n",
+              "2020-07-30   71.27  76.27    73.770  2020    7\n",
+              "...            ...    ...       ...   ...  ...\n",
+              "2015-06-05    8.98   9.03     9.005  2015    6\n",
+              "2015-06-04    8.97   9.02     8.995  2015    6\n",
+              "2015-06-03    8.97   9.02     8.995  2015    6\n",
+              "2015-06-02    8.97   9.02     8.995  2015    6\n",
+              "2015-06-01    8.96   9.01     8.985  2015    6\n",
+              "\n",
+              "[1268 rows x 5 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-882a7dc1-0ae3-4e99-9786-c4445e93d46b\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>compra</th>\n",
+              "      <th>venta</th>\n",
+              "      <th>Promedio</th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>fecha</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2020-08-05</th>\n",
+              "      <td>71.89</td>\n",
+              "      <td>76.89</td>\n",
+              "      <td>74.390</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-08-04</th>\n",
+              "      <td>71.69</td>\n",
+              "      <td>76.69</td>\n",
+              "      <td>74.190</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-08-03</th>\n",
+              "      <td>71.64</td>\n",
+              "      <td>76.64</td>\n",
+              "      <td>74.140</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-07-31</th>\n",
+              "      <td>71.39</td>\n",
+              "      <td>76.39</td>\n",
+              "      <td>73.890</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-07-30</th>\n",
+              "      <td>71.27</td>\n",
+              "      <td>76.27</td>\n",
+              "      <td>73.770</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-06-05</th>\n",
+              "      <td>8.98</td>\n",
+              "      <td>9.03</td>\n",
+              "      <td>9.005</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-06-04</th>\n",
+              "      <td>8.97</td>\n",
+              "      <td>9.02</td>\n",
+              "      <td>8.995</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-06-03</th>\n",
+              "      <td>8.97</td>\n",
+              "      <td>9.02</td>\n",
+              "      <td>8.995</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-06-02</th>\n",
+              "      <td>8.97</td>\n",
+              "      <td>9.02</td>\n",
+              "      <td>8.995</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-06-01</th>\n",
+              "      <td>8.96</td>\n",
+              "      <td>9.01</td>\n",
+              "      <td>8.985</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>1268 rows × 5 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-882a7dc1-0ae3-4e99-9786-c4445e93d46b')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-882a7dc1-0ae3-4e99-9786-c4445e93d46b button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-882a7dc1-0ae3-4e99-9786-c4445e93d46b');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     }
