--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPOwH/tcZ/JZKmmUpeFNLFP",
+      "authorship_tag": "ABX9TyM7q8zrZeYFTcpX4ZBYBGEf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,23 +32,317 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "u8Kx2LvtCpV6",
-        "outputId": "52f9e093-6a06-4d1a-ed5d-3967fcaf50bd"
+        "id": "u8Kx2LvtCpV6"
       },
+      "outputs": [],
+      "source": [
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('http://data.insideairbnb.com/the-netherlands/north-holland/amsterdam/2022-03-08/visualisations/listings.csv')"
+      ],
+      "metadata": {
+        "id": "905BirLmB1eC"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 617
+        },
+        "id": "ZoBmIcmrB_NE",
+        "outputId": "24582f7d-31e6-4326-aa0c-3128a8eece9f"
+      },
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hi, testing!\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      id                                               name  host_id  \\\n",
+              "0   2818           Quiet Garden View Room & Super Fast WiFi     3159   \n",
+              "1  20168       Studio with private bathroom in the centre 1    59484   \n",
+              "2  27886  Romantic, stylish B&B houseboat in canal district    97647   \n",
+              "3  28871                            Comfortable double room   124245   \n",
+              "4  29051                            Comfortable single room   124245   \n",
+              "\n",
+              "   host_name  neighbourhood_group                           neighbourhood  \\\n",
+              "0     Daniel                  NaN  Oostelijk Havengebied - Indische Buurt   \n",
+              "1  Alexander                  NaN                            Centrum-Oost   \n",
+              "2       Flip                  NaN                            Centrum-West   \n",
+              "3      Edwin                  NaN                            Centrum-West   \n",
+              "4      Edwin                  NaN                            Centrum-Oost   \n",
+              "\n",
+              "   latitude  longitude     room_type  price  minimum_nights  \\\n",
+              "0  52.36435    4.94358  Private room     49               3   \n",
+              "1  52.36407    4.89393  Private room    106               1   \n",
+              "2  52.38761    4.89188  Private room    134               2   \n",
+              "3  52.36775    4.89092  Private room     75               2   \n",
+              "4  52.36584    4.89111  Private room     55               2   \n",
+              "\n",
+              "   number_of_reviews last_review  reviews_per_month  \\\n",
+              "0                285  2021-11-21               1.81   \n",
+              "1                339  2020-04-09               2.30   \n",
+              "2                228  2022-02-20               1.84   \n",
+              "3                379  2022-03-05               2.70   \n",
+              "4                532  2022-03-04               3.98   \n",
+              "\n",
+              "   calculated_host_listings_count  availability_365  number_of_reviews_ltm  \\\n",
+              "0                               1                62                      7   \n",
+              "1                               2                 0                      0   \n",
+              "2                               1               189                      9   \n",
+              "3                               2               146                     43   \n",
+              "4                               2               170                     53   \n",
+              "\n",
+              "                    license  \n",
+              "0  0363 5F3A 5684 6750 D14D  \n",
+              "1  0363 CBB3 2C10 0C2A 1E29  \n",
+              "2  0363 974D 4986 7411 88D8  \n",
+              "3  0363 607B EA74 0BD8 2F6F  \n",
+              "4  0363 607B EA74 0BD8 2F6F  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-d8c47ebb-b3bf-4cd1-b433-497032cc2111\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>name</th>\n",
+              "      <th>host_id</th>\n",
+              "      <th>host_name</th>\n",
+              "      <th>neighbourhood_group</th>\n",
+              "      <th>neighbourhood</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>room_type</th>\n",
+              "      <th>price</th>\n",
+              "      <th>minimum_nights</th>\n",
+              "      <th>number_of_reviews</th>\n",
+              "      <th>last_review</th>\n",
+              "      <th>reviews_per_month</th>\n",
+              "      <th>calculated_host_listings_count</th>\n",
+              "      <th>availability_365</th>\n",
+              "      <th>number_of_reviews_ltm</th>\n",
+              "      <th>license</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2818</td>\n",
+              "      <td>Quiet Garden View Room &amp; Super Fast WiFi</td>\n",
+              "      <td>3159</td>\n",
+              "      <td>Daniel</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Oostelijk Havengebied - Indische Buurt</td>\n",
+              "      <td>52.36435</td>\n",
+              "      <td>4.94358</td>\n",
+              "      <td>Private room</td>\n",
+              "      <td>49</td>\n",
+              "      <td>3</td>\n",
+              "      <td>285</td>\n",
+              "      <td>2021-11-21</td>\n",
+              "      <td>1.81</td>\n",
+              "      <td>1</td>\n",
+              "      <td>62</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0363 5F3A 5684 6750 D14D</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>20168</td>\n",
+              "      <td>Studio with private bathroom in the centre 1</td>\n",
+              "      <td>59484</td>\n",
+              "      <td>Alexander</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Centrum-Oost</td>\n",
+              "      <td>52.36407</td>\n",
+              "      <td>4.89393</td>\n",
+              "      <td>Private room</td>\n",
+              "      <td>106</td>\n",
+              "      <td>1</td>\n",
+              "      <td>339</td>\n",
+              "      <td>2020-04-09</td>\n",
+              "      <td>2.30</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0363 CBB3 2C10 0C2A 1E29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>27886</td>\n",
+              "      <td>Romantic, stylish B&amp;B houseboat in canal district</td>\n",
+              "      <td>97647</td>\n",
+              "      <td>Flip</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Centrum-West</td>\n",
+              "      <td>52.38761</td>\n",
+              "      <td>4.89188</td>\n",
+              "      <td>Private room</td>\n",
+              "      <td>134</td>\n",
+              "      <td>2</td>\n",
+              "      <td>228</td>\n",
+              "      <td>2022-02-20</td>\n",
+              "      <td>1.84</td>\n",
+              "      <td>1</td>\n",
+              "      <td>189</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0363 974D 4986 7411 88D8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>28871</td>\n",
+              "      <td>Comfortable double room</td>\n",
+              "      <td>124245</td>\n",
+              "      <td>Edwin</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Centrum-West</td>\n",
+              "      <td>52.36775</td>\n",
+              "      <td>4.89092</td>\n",
+              "      <td>Private room</td>\n",
+              "      <td>75</td>\n",
+              "      <td>2</td>\n",
+              "      <td>379</td>\n",
+              "      <td>2022-03-05</td>\n",
+              "      <td>2.70</td>\n",
+              "      <td>2</td>\n",
+              "      <td>146</td>\n",
+              "      <td>43</td>\n",
+              "      <td>0363 607B EA74 0BD8 2F6F</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>29051</td>\n",
+              "      <td>Comfortable single room</td>\n",
+              "      <td>124245</td>\n",
+              "      <td>Edwin</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Centrum-Oost</td>\n",
+              "      <td>52.36584</td>\n",
+              "      <td>4.89111</td>\n",
+              "      <td>Private room</td>\n",
+              "      <td>55</td>\n",
+              "      <td>2</td>\n",
+              "      <td>532</td>\n",
+              "      <td>2022-03-04</td>\n",
+              "      <td>3.98</td>\n",
+              "      <td>2</td>\n",
+              "      <td>170</td>\n",
+              "      <td>53</td>\n",
+              "      <td>0363 607B EA74 0BD8 2F6F</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d8c47ebb-b3bf-4cd1-b433-497032cc2111')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-d8c47ebb-b3bf-4cd1-b433-497032cc2111 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-d8c47ebb-b3bf-4cd1-b433-497032cc2111');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
-      ],
-      "source": [
-        "print('hi, testing!')"
       ]
     }
   ]
